Fixed unit tests